--- a/src/cascadia/CascadiaPackage/NOTICE.html
+++ b/src/cascadia/CascadiaPackage/NOTICE.html
@@ -10,7 +10,7 @@
     </p>
     <p>
       During a branded release build, this file is replaced with the content of
-      <tt>NOTICES.md</tt> from the root of the repository.
+      <code>NOTICES.md</code> from the root of the repository.
     </p>
   </body>
 </html>
